# getman

./: .gitignore  ARCHITECTURE.md  CHECKLIST.md  Cargo.toml  IMPLEMENTATION.md  README.md  ROADMAP.md  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.tsbuildinfo
.getman/: history.json
.github/workflows/: build-dmg.yml
app/: globals.css  layout.tsx  page.tsx
components/getman/: assertion-editor.tsx  auth-editor.tsx  benchmark-dialog.tsx  body-editor.tsx  code-generator-dialog.tsx  collection-runner-dialog.tsx  getman-app.tsx  getman-header.tsx  getman-sidebar.tsx  import-export-dialog.tsx  kv-editor.tsx  method-badge.tsx  request-bar.tsx  request-editor.tsx  response-viewer.tsx  save-request-dialog.tsx  tab-bar.tsx
lib/: abstractions.ts  advanced-auth.ts  api-docs.ts  assertions.ts  benchmark.ts  capability-types.ts  cli-export.ts  code-generator.ts  collaboration.ts  collection-runner.ts  crypto.ts  curl-parser.ts  getman-store.ts  openapi.ts  postman.ts  request-builder.ts  request-scripts.ts  response-inspector.ts  runner.ts  script-engine.ts  tauri.ts
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/abstractions/: cache.rs  database.rs  message_queue.rs  mod.rs  stateful.rs  tenant.rs
src-tauri/src/commands/: benchmark_commands.rs  env_commands.rs  grpc_commands.rs  http_commands.rs  mod.rs  state_commands.rs
src-tauri/src/domain/: benchmark_types.rs  mod.rs  types.rs
src-tauri/src/engine/: benchmark.rs  cancel.rs  env.rs  grpc.rs  http.rs  mod.rs
src-tauri/src/store/: sqlite.rs
src/auth/: mod.rs
src/cli/: mod.rs
src/collections/: mod.rs
src/environment/: mod.rs
src/history/: mod.rs
src/http/: client.rs  method.rs  mod.rs  request.rs  response.rs
src/import_export/: mod.rs
src/plugins/: mod.rs
src/storage/: mod.rs
src/testing/: mod.rs
src/ui/: auth_editor.rs  body_editor.rs  header.rs  mod.rs  (+7 more)
