[package]
name = "getman"
version = "0.1.0"
description = "Getman desktop API client"
authors = ["cyo"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["gzip", "rustls-tls", "socks"] }
tokio = { version = "1", features = ["sync", "macros", "net", "rt"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
# gRPC support
tonic = { version = "0.14", features = ["transport"] }
prost = "0.14"
prost-reflect = { version = "0.16", features = ["serde"] }
protox = "0.9"
bytes = "1"
http = "1"
prost-types = "0.14"
tokio-stream = "0.1"
base64 = "0.22"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
